[package]
name = "reqwest-conditional-middleware"
description = "A middleware wrapper that enables (or disables) a wrapped Reqwest middleware on a per-request basis"
version = "0.4.0"
documentation = "https://docs.rs/reqwest-conditional-middleware/"
repository = "https://github.com/oxidecomputer/reqwest-conditional-middleware"
readme = "README.md"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = "0.1.80"
http = "1"
reqwest = { version = "0.12", default-features = false }
reqwest-middleware = { version = "0.4" }

[dev-dependencies]
tokio = { version = "1.6", features = ["full"] }
